--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
   <head>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Itchy Sniffle</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Itchy Sniffle</h1>
-    <h2>Student generator for CPTR424</h2>
-    <div id='content'>
-      <input id='id-start' placeholder='First ID'></input>
-      <br>
-      <input id='id-end' placeholder='Last ID'></input>
-      <br>
-      <button id='submit'>Generate!</button>
-    </div>
+    <div id='container'>
+      <h1>Itchy Sniffle</h1>
+      <h2>Student generator for CPTR424</h2>
+      <div id='content'>
+        <h3>Starting ID Number
+          <input id='id-start' placeholder='First ID'></input>
+        </h3>
+        <h3>Ending ID Number
+          <input id='id-end' placeholder='Last ID'></input>
+        </h3>
+        <h3>
+          <button id='submit'>Generate!</button>
+        </h3>
+      </div>
+      <div id='anchor'></div>
 
-    <div id='anchor'></div>
+    </div>
 
     <script src="chance.js"></script>
     <script src="content.js"></script>
